# Pico-Build-Action

./: CONTRIBUTING.md  Dockerfile  README.md  action.yml  entrypoint.sh
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bug-fix.md  config.yml  new-feature.md
.github/scripts/: update_major_tag.bash  v1-msg.txt
.github/workflows/: test-action.yml
test_program/: CMakeLists.txt  blink.c
